# compass

./: .env.example  .gitignore  .python-version  CLAUDE.md  pyproject.toml  test_retrieval.py
evals/: answer_eval.py  citation_eval.py  eval_dataset.jsonl  refusal_eval.py  retrieval_eval.py
evals/results/: baseline_summary.md  citation_eval_results.jsonl
scripts/: analysis_answer_evals.py  ingest_all.py  sample_chunks.py
src/compass/: __init__.py  config.py
src/compass/api/: generator.py  main.py
src/compass/ingest/: chunker.py  embedder.py  pipeline.py
src/compass/ingest/crawlers/: base.py  github.py  pdf.py
src/compass/retrieval/: query_expansion.py  retriever.py
