[project]
name = "compass"
version = "0.1.0"
description = "RAG system for AI engineering best practices — production-grade, eval-driven"
readme = "README.md"
authors = [
    { name = "Prem Vyanamoni", email = "prem.vyanamoni@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []
[project.urls]
Homepage = "https://github.com/premvyanamoni/compass"
Issues = "https://github.com/premvyanamoni/compass/issues"

[project.scripts]
compass = "compass:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
