[project]
name = "compass"
version = "0.1.0"
description = "RAG system for AI engineering best practices — production-grade, eval-driven"
readme = "README.md"
authors = [
    { name = "Prem Vyanamoni", email = "prem.vyanamoni@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "lancedb>=0.33.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "trafilatura>=2.0.0",
]
[project.urls]
Homepage = "https://github.com/premvyanamoni/compass"
Issues = "https://github.com/premvyanamoni/compass/issues"

[project.scripts]
compass = "compass:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
