[project]
name = "compass"
version = "0.1.0"
description = "RAG system for AI engineering best practices — production-grade, eval-driven"
readme = "README.md"
authors = [
    { name = "Prem Vyanamoni", email = "prem.vyanamoni@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "lancedb>=0.33.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "pylance>=7.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.49.0",
]
[project.urls]
Homepage = "https://github.com/premvyanamoni/compass"
Issues = "https://github.com/premvyanamoni/compass/issues"

[project.scripts]
compass = "compass:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
